Added AddProfile Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:parentActivityName=".MainActivity">
         </activity>
 
+        <activity android:name=".AddProfile"
+            android:label="Add an Profile!">
+        </activity>
+
         <receiver android:name=".AlarmReceiver"/>
 
     </application>
