--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.android.support:support-v4:+'
+    //compile project(':android-beacon-library')
     compile 'org.altbeacon:android-beacon-library:2+'
 
 }
