--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.scu.mparihar.mainproject">
 
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
-    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
     <application
+        android:name=".BeaconApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".BeaconApplication"
         android:theme="@style/AppTheme">
-
         <service android:name=".MyBeaconService" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />`
+                <action android:name="android.intent.action.MAIN" />
+                `
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,14 +35,25 @@
             android:name=".AddEvent"
             android:label="Add an Event!"
             android:parentActivityName=".MainActivity">
-        </activity>
 
+        </activity>
         <activity
             android:name=".AddProfile"
             android:label="Add a Profile!"
             android:parentActivityName=".MainActivity">
-        </activity>
 
+        </activity>
+        <activity
+            android:name=".ViewEventActivity"
+            android:label="Event Details"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
+        <activity
+            android:name=".ViewProfileActivity"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
